src/main/assets/angular-material-clipboard/clipboard.scss
@import "./clipboard-theme";

//TODO: stretch input underline to full width (like md-select)
$md-input-clipbard-button-size: 30px !default;

.md-input-clipboard {
  // Don't let linebreaks happen between the open icon-button and the input.
  white-space: nowrap;
  overflow: hidden;
  vertical-align: middle;
  position: relative;
  outline: none;

  //Display as row
  display: -webkit-flex;
  display: -moz-flex;
  display: -ms-flexbox; // IE10 uses -ms-flexbox
  display: -ms-flex; // IE11
  display: flex;

  -webkit-flex-direction: row;
  -moz-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;

  /**
   * Hover state
   */
  &:not([disabled]):hover {
    cursor: pointer;
  }

  /**
   * Focus state
   */
  &:not([disabled]):focus .md-input {
    border-bottom-width: 2px;
    border-bottom-style: solid;
    padding-bottom: 0;
  }


  & div.md-input-clipboard__container {
    display: -webkit-flex;
    display: -moz-flex;
    display: -ms-flexbox; // IE10 uses -ms-flexbox
    display: -ms-flex; // IE11
    display: flex;

    -webkit-flex-direction: row;
    -moz-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;

    -webkit-align-items: center;
    -ms-flex-align: center;
    align-items: center;

    -webkit-flex-grow: 1;
    -moz-flex-grow: 1;
    -ms-flex-grow: 1;
    flex-grow: 1;
    height: $md-input-clipbard-button-size;

    /*
    .md-errors-spacer {
      display: none; //TODO this element is automatically created by ngMaterial
    }
    */
  }

  &__label {
    //cursor: pointer;
    //min-width: 120px;

    -webkit-flex: 1;
    -moz-flex: 1;
    -ms-flex: 1;
    flex: 1;
  }

  &__icon {
    color: currentColor !important;
    display: inline-block;
    box-sizing: border-box;
    background: none;
    -webkit-align-items: flex-end;
    -ms-flex-align: end;
    align-items: flex-end;

    -webkit-order: 3;
    -ms-flex-order: 3;
    order: 3;

    -webkit-transform: scale(0.6);
    -moz-transform: scale(0.6);
    -ms-transform: scale(0.6);
    -o-transform: scale(0.6);
    transform: scale(0.6);
  }

}

//Case in input container
//md-input-container > .md-input-clipboard {
  //margin-bottom: 24px; //TODO variable?
//}

